Miscellaneous/gravitee-echo-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gravitee-echo-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    - host: apim.example.com
      http:
        paths:
          - path: /echo(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gravitee-echo-api
                port:
                  number: 80
